<resources>
    <string name="app_name">PDFReader</string>
    <string name="title">Compose UI Main</string>
    <string name="migrate_desc">State and Jetpack Compose</string>
    <string name="a11y_close">Close</string>
    <string name="current_year">Current is %d Year</string>
    <string name="text_in_compose">Text is a central piece of any UI, and Jetpack Compose makes it easier to display or write text. Compose leverages composition of its building blocks, meaning you don’t need to overwrite properties and methods or extend big classes to have a specific composable design and logic working the way you want.
        As its base, Compose provides a BasicText and BasicTextField which are the barebones to display text and handle user input. At a higher level, Compose provides Text and TextField, which are composables following Material Design guidelines. It’s recommended to use them as they have the right look and feel for users on Android, and includes other options to simplify their customization without having to write a lot of code.</string>
    <string name="text_not_selectable">You may want to disable selection on specific parts of a selectable area. To do so, you need to wrap the unselectable part with a DisableSelection composable:</string>
    <string name="text_selectable">Selecting text By default, composables aren’t selectable, which means by default users can\'t select and copy text from your app. To enable text selection, you need to wrap your text elements with a SelectionContainer composable</string>
    <string name="bottom_sheet_dialog">Bottom Sheet Dialog</string>
    <string name="bottom_sheet_upload">Upload</string>
    <string name="bottom_sheet_download">Download</string>
    <string name="act_jump">Activity Jump</string>
    <string name="translucent">Translucent</string>
    <string name="show_snackbar_button">Show Snackbar</string>
    <string name="text_content_desc">When using an ImageView, ImageButton, CheckBox, or other View that conveys information graphically, use an android:contentDescription attribute to provide a content label for that View.</string>
    <string name="date">Today is : %d-%d-%d.</string>
    <plurals name="sometimes_ago">
        <item quantity="one">a week ago</item>
        <item quantity="two">two weeks ago</item>
        <item quantity="few">a month ago</item>
        <item quantity="many">a year ago</item>
        <item quantity="other">%d years ago</item>
    </plurals>
</resources>